--- a/stylesheets/SassyExport.scss
+++ b/stylesheets/SassyExport.scss
@@ -1,6 +1,6 @@
 // SassyExport : convert passed map to json and write to path/to/filename.json
 // ----------------------------------------------------------------------------------------------------
-// @param $path [string] : directory path and filename
+// @param $path [string] : directory path and filename, valid extensions: [json | js]
 // @param $map [map] : map to convert to json
 // @param $pretty [bool] : pretty print json
 // @param $debug [bool] : print debug string with path
@@ -8,15 +8,5 @@
 // @return $string | write json to path
 
 @mixin SassyExport($path, $map, $pretty: false, $debug: false) {
-    @at-root {
-        @if $debug {
-            SassyExport {
-                content: "#{SassyExport($path, $map, $pretty, $debug)}";
-            }
-        } @else {
-            %SassyExport {
-                /* #{SassyExport($path, $map, $pretty, $debug)} */
-            }
-        }
-    }
+    @at-root { @if $debug { /* #{SassyExport($path, $map, $pretty, $debug)} */ } }
 }
