--- a/stylesheets/_sassy-export.sass
+++ b/stylesheets/_sassy-export.sass
@@ -2,19 +2,17 @@
 /// Convert passed map to json and write to <path>/<filename>.<ext>
 ///
 /// @param {String} $path    - Directory path and filename
-/// @param {map}    $map     - Map to convert to json
+/// @param {Map}    $map     - Map to convert to json
 /// @param {Bool}   $pretty  - Pretty print json
 /// @param {Bool}   $debug   - Print debug string with path
 /// @param {Bool}   $use_env - Use ENV['PWD'] for current directory instead of Dir.pwd
 ///
 /// @return {String} - Write file to path
 ///
-@mixin SassyExport($path, $map, $pretty: false, $debug: false, $use_env: false) {
-    @at-root {
-        @if $debug {
-            /*! #{SassyExport($path, $map, $pretty, $debug, $use_env)} */
-        } @else {
-            %SassyExport { /*! #{SassyExport($path, $map, $pretty, $debug, $use_env)} */ }
-        }
-    }
-}
+@mixin sassy-export($path, $map, $pretty: false, $debug: false, $use_env: false)
+  @at-root
+    @if $debug
+      /*! #{export($path, $map, $pretty, $debug, $use_env)} */
+    @else
+      %sassy-export
+        /*! #{export($path, $map, $pretty, $debug, $use_env)} */
