--- a/stylesheets/_sassy-export.sass
+++ b/stylesheets/_sassy-export.sass
@@ -5,7 +5,7 @@
 /// @param {Map}    $map     - Map to convert to json
 /// @param {Bool}   $pretty  - Pretty print json
 /// @param {Bool}   $debug   - Print debug string with path
-/// @param {Bool}   $use_env - Use ENV['PWD'] for current directory instead of Dir.pwd
+/// @param {Bool}   $use_env - Use ENV["PWD"] for current directory instead of Dir.pwd
 ///
 /// @return {String} - Write file to path
 ///
